Featured Works: Prevent long titles from overlapping cards (#1085)
An .ellipsis CSS class has been added which can be used if this comes up
in other situations.

--- a/app/javascript/frontend/styles/_common.scss
+++ b/app/javascript/frontend/styles/_common.scss
@@ -127,6 +127,11 @@ h4,
   }
 }
 
+.ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 //
 // Utility Classes
 //
